<resources>
    <string name="app_name">KLUEApp</string>
    <string name="takephoto">Take Photo</string>
    <string name="choosefrmgallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="addphoto">Add Photo!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="top_pics">Top pics</string>
    <string name="categories">Categories</string>
    <string name="whislist">Whislist</string>
    <string name="account">Account</string>
    <string name="save_delivery_location">Save Delivery Location</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="house_falt_no">House/Falt No.</string>
    <string name="landmark">Landmark</string>
    <string name="email_id">Email Id</string>
    <string name="save_address">Save Address</string>
    <string name="filters">Filters</string>
    <string name="sort">Sort</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="apply">Apply</string>
    <string name="enter_your_mobile_number">Enter your Mobile number</string>
    <string name="ok">ok</string>
    <string name="search_products">Search products</string>
    <string name="new_arrival">New Arrival</string>
    <string name="view_all">VIEW ALL</string>
    <string name="login">Login</string>
    <string name="hello_there">Hello there!</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="terms_conditions_apply">Terms and Conditions Apply</string>
    <string name="my_account">My Account</string>
    <string name="info">Info</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password_acc">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="my_orders">My Orders</string>
    <string name="my_address">My Address</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="help_center">Help Center</string>
    <string name="logout">Logout</string>
    <string name="easiest_way_to_shop_online">Easiest way to Shop online</string>
    <string name="browse_as_guest">Browse as Guest</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="offers">Offers</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="promo_code">Promo Code</string>
    <string name="order_total">Order Total</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="payment_information">Payment Information</string>
    <string name="otp">OTP</string>
    <string name="enter_the_pin_you_have_received_via_sms">Enter the pin you have received via SMS</string>
    <string name="resend_code">Resend Code</string>
    <string name="call_me">Call me</string>
    <string name="submit">Submit</string>
    <string name="payment_details">Payment Details</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="your_payment_has_been_processed_details_of_transactions_are_included_below">Your payment has been processed! Details of transactions are included below</string>
    <string name="amount">Amount</string>
    <string name="order_id">Order ID</string>
    <string name="payment_type">Payment Type</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="popularity">Popularity</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="details">Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="create_an_account">Create an Account</string>
    <string name="password_reg">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="signin">Signin</string>
    <string name="subtotal">Subtotal</string>
    <string name="Continue">Continue</string>
    <string name="skip_the_intro">SKIP THE INTRO</string>
    <string name="my_order">My Order</string>
    <string name="notifications">Notifications</string>
    <string name="select_image_path">Selected Image path:</string>
    <string name="data">data</string>
    <string name="camera_path">Camera Path</string>
    <string name="anniversary">Anniversary</string>
    <string name="flowers">Flowers</string>
    <string name="pwd_send_to_mobile_successfully">password send to mobile number successfully!!!</string>
    <string name="product_details">Product Details</string>
    <string name="page">page</string>
    <string name="on_page_selected">onPageSelected:</string>
    <string name="occations">Occations</string>
    <string name="order_details">Order details</string>
    <string name="order_summary">Order Summary</string>
    <string name="select_payment_mode">Select Payment Method</string>
    <string name="debit_card">Debit Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="cod">COD</string>
    <string name="shoppind_cart">Shopping Cart</string>
    <string name="enter_all_fields">Please enter all Fields</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confrom_password">Confrom Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="guest">Guest</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="all_categories">All Categories</string>
    <string name="sub_category">Subcategory</string>
    <string name="choose_language">Choose Language</string>
    <string name="quantity">Quantity</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="buy_now">Buy Now</string>
    <string name="currency">Currency</string>
    <string name="change_currency">Change Currency</string>
    <string name="gift_wrapping">Gift Wrapping</string>
    <string name="balloon">Balloon</string>
    <string name="flower">Flower</string>
    <string name="gift_accessories">Gift Accessories</string>
    <string name="card">Card</string>
    <string name="select_language">Select Language</string>
    <string name="city">City</string>
    <string name="select_city">Select City</string>
    <string name="skip">Skip</string>
    <string name="please_select_address">Please select any one address.</string>
    <string name="please_select_delivery">Please select one delivery option.</string>
    <string name="total_amount">Total Amount</string>
    <string name="no_of_items">No of Items</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="sub_total">Sub Total</string>
    <string name="placed_on">Placed on:</string>
    <string name="order_will_be_deliver_by">Order will be deliver by</string>
    <string name="net_price">Net Price</string>
    <string name="credit_card_payment">Credit Card Payment</string>
    <string name="address1">Address :</string>
    <string name="email1">Email :</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="pincode">Pincode :</string>
    <string name="delivery_date">Delivery Date :</string>
    <string name="delivery_before_2_pm">Delivery Before 2 PM</string>
    <string name="delivery_after_3_pm">Delivery After 3 PM</string>
    <string name="friday_delivery_before_2_pm_only">Friday Delivery Before 2 PM Only</string>
    <string name="pending">Pending...</string>
    <string name="out_of_delivery">Out of Delivery</string>
    <string name="processing">Processing...</string>
    <string name="approved">Approved</string>
    <string name="canceled">Cancelled</string>
    <string name="deliverd">Delivered</string>
    <string name="on_the_way">On the Way</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="cart_is_empty_add_items_into_cart">Cart is Empty,Plz add items into Cart</string>
    <string name="plz_select_delivery_time">Please select delivery time</string>
    <string name="delivery_charges">Delivery Charges :</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="cod_payment">COD Payment</string>
    <string name="cod_charges">COD Charges</string>
    <string name="online">Online</string>
    <string name="sadaad">SADAAD</string>
    <string name="pay_and_continue">Pay and Continue</string>
    <string name="transaction_time">Transaction Time</string>
    <string name="proceed_to_next">Proceed To Next</string>
    <string name="search_items">Search Items</string>
    <string name="charges_apply_for_cod">*Charges Apply for COD</string>
    <string name="plz_select_payment_method">Please Select Payment Method</string>
    <string name="you_need_to_allow_location_files"><![CDATA[You need to allow to access the Location & Files.]]></string>
    <string name="plz_fill_all_fileds">Please enter all fields</string>
    <string name="plz_check_internet_connection">Please check Internet conncetion.</string>
    <string name="browse">Browse</string>
    <string name="upload_image">Upload Image</string>
    <string name="message_card">Message/Card</string>
    <string name="don_t_forgot_to_enter_your_name">*Don\'t forgot to enter your name</string>
    <string name="note">Note</string>
    <string name="enter_your_mail_id">Enter your mail Id</string>
    <string name="no_items">No Items</string>
    <string name="plz_login_to_save_into_fav">Please Login to save into favourites.</string>
    <string name="choose_browser">Choose browser of your choice</string>
    <string name="plz_login_add_into_fav">Please make sure that Login before adding into favouries.</string>
    <string name="gift_preparation">Gift Preparation</string>
    <string name="img_upload_successfully">Image Uploaded Successfully</string>
    <string name="plz_login_to_goto_profile">Please Login,to go to Profile Page.</string>
    <string name="plz_login_to_goto_order">Please Login,to go to Orders Page.</string>
    <string name="plz_login_to_goto_notifications">Please Login,to go to Notifications Page.</string>
    <string name="plz_login_to_goto_address_page">Please Login,to go to Address Page.</string>
    <string name="plz_login_to_goto_fav_page">Please Login,to go to Favourite Page.</string>
    <string name="plz_login_to_goto_profile_page">Please Login,to go to Profile Page.</string>
    <string name="plz_login_to_add_into_cart">Please Login,to save into cart.</string>
    <string name="plz_login_to_goto_cart">Please Login,to go to Cart Page.</string>
    <string name="buferring_video_plz_wait">Buffering video please wait...</string>
    <string name="plz_enter_ur_mail_or_mobile_num">Please Enter Your Email or Mobile Number</string>
    <string name="chat">Chat</string>
    <string name="no_connectivity_toast_message">No connection</string>
</resources>