<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:elevation="5dp"
    android:padding="@dimen/padding_10dp">

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorBlack"
        android:labelFor="@+id/editTextDialogUserInput"
        android:text="@string/enter_your_mail_id"
        android:textSize="@dimen/size_titles_16sp" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:inputType="textEmailAddress"
        android:paddingBottom="@dimen/padding_20dp"
        android:hint="@string/email"
        android:focusable="true"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_border_black"
        android:text="@string/ok"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/size_titles_16sp"/>

</LinearLayout>