<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_20dp"
    android:elevation="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_medium"
            android:padding="@dimen/padding_5dp"
            android:text="@string/sort"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/size_titles_20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBorder" />

        <RadioGroup
            android:id="@+id/sort_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:elevation="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_price_low_to_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:checked="false"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/price_low_to_high"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/size_titles_20sp" />

            <RadioButton
                android:id="@+id/rb_price_high_to_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:checked="false"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/price_high_to_low"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/size_titles_20sp" />

            <RadioButton
                android:id="@+id/rb_new_arrivals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:checked="false"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/new_arrivals"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/size_titles_20sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:id="@+id/btncancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_5dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/size_titles_16sp" />
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <android.support.v7.widget.CardView
                android:id="@+id/btnapply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_5dp"
                android:layout_weight="1"
                android:background="@color/colorWhite">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/size_titles_16sp" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>